--- a/.github/workflows/notify-slack-end.yml
+++ b/.github/workflows/notify-slack-end.yml
@@ -8,6 +8,9 @@ on:
       time:
         required: true
         type: string
+      notify:
+        required: false
+        type: string
       result:
         required: true
         type: string
@@ -18,6 +21,7 @@ on:
 jobs:
   notify-start:
     name: Notify release end
+    if: ${{ inputs.notify !== 'failure' || inputs.result == 'failure'}}
     runs-on: ubuntu-latest
     steps:
       - name: Set environment variables
