Added logs for inputs

--- a/.github/workflows/notify-slack-end.yml
+++ b/.github/workflows/notify-slack-end.yml
@@ -21,11 +21,11 @@ on:
 jobs:
   notify-start:
     name: Notify release end
-    if: ${{ inputs.notify != 'failure' || inputs.result != 'success'}}
     runs-on: ubuntu-latest
     steps:
       - name: Set environment variables
         run: |
+          echo ${{ toJson(inputs) }}
           echo "time_seconds=$(( $(date +%s) - ${{ inputs.time }}  ))" >> "$GITHUB_ENV"
           echo "cut_sha=$(cut -c 1-7 <<<  ${{ github.sha }})" >> "$GITHUB_ENV"
       - name: Parse time
