--- a/.github/workflows/notify-slack-end.yml
+++ b/.github/workflows/notify-slack-end.yml
@@ -21,7 +21,7 @@ on:
 jobs:
   notify-start:
     name: Notify release end
-    if: ${{ inputs.result != 'success'}}
+    if: ${{ inputs.notify != 'failure' || inputs.result != 'success' }}
     runs-on: ubuntu-latest
     steps:
       - name: Set environment variables
