--- a/.github/workflows/notify-slack-start.yml
+++ b/.github/workflows/notify-slack-start.yml
@@ -5,9 +5,9 @@ on:
       channel:
         required: true
         type: string
-      notify:
-        required: false
-        type: string
+      notifyOnlyOnFailure:
+        required: true
+        type: boolean
     outputs:
       time:
         description: "Start of the release in seconds"
@@ -19,7 +19,7 @@ on:
 jobs:
   notify-start:
     name: Notify release start
-    if: ${{ inputs.notify != 'failure'}}
+    if: ${{ inputs.notifyOnlyOnFailure == false}}
     runs-on: ubuntu-latest
     outputs:
       output: ${{ steps.time.outputs.time }}
