--- a/.github/workflows/test-slack.yml
+++ b/.github/workflows/test-slack.yml
@@ -29,13 +29,13 @@ jobs:
   notify-end:
     if: always()
     name: Notify release end
-    needs: [ notify-start, activate-pm2 ]
+    needs: [ notify-start, release ]
     uses: ho-nl/release-slack-action/.github/workflows/notify-slack-end.yml@main
     secrets:
       slackToken: ${{ secrets.SLACK_BOT_RELEASE_TOKEN}}
     with:
       time: ${{ needs.notify-start.outputs.time }}
-      result: ${{ needs.activate-pm2.result }}
+      result: ${{ needs.release.result }}
       channel: 12gobiking-test
       message: Test
       notifyOnlyOnFailure: false
