feat(updatedMessage): use html_url to retrieve the correct page instead of the api endpoint

--- a/.github/workflows/notify-slack-end.yml
+++ b/.github/workflows/notify-slack-end.yml
@@ -50,7 +50,7 @@ jobs:
                         "type": "section",
                         "text": {
                           "type": "mrkdwn",
-                          "text": "*${{ inputs.message && inputs.message || github.event.repository.name }} - ${{ github.workflow }}* \n <${{ github.event.repository.url }}/commit/${{ github.sha }} | ${{ env.cut_sha }}> (<${{ github.event.repository.url }}/actions/runs/${{ github.run_id }} | open>)"
+                          "text": "*${{ inputs.message && inputs.message || github.event.repository.name }} - ${{ github.workflow }}* \n <${{ github.event.repository.html_url }}/commit/${{ github.sha }} | ${{ env.cut_sha }}> (<${{ github.event.repository.html_url }}/actions/runs/${{ github.run_id }} | open>)"
                         }
                       },
                       {
