feat(updatedMessage): add Cancelled to status on slack message

--- a/.github/workflows/notify-slack-end.yml
+++ b/.github/workflows/notify-slack-end.yml
@@ -58,7 +58,7 @@ jobs:
                         "elements": [
                           {
                             "type": "plain_text",
-                            "text": "${{ inputs.result == 'success' && 'Success' || 'Failure' }} after ${{ env.parsed_time }}",
+                            "text": "${{ inputs.result == 'success' && 'Success' || inputs.result == 'cancelled' && 'Cancelled' || 'Failure' }} after ${{ env.parsed_time }}",
                             "emoji": true
                           }
                         ]
